--- a/scss/_@media.scss
+++ b/scss/_@media.scss
@@ -168,7 +168,13 @@
 //--------------------------------------------------
 //--------------------------------------------------
 
-@media (max-width: 1200px) {
+@media (max-width: 1440px) {
+    .footer__section__article__div {
+    width:70%;
+    }
+}
+
+@media (max-width: 1280px) {
     .footer__section__article__div {
     width:80%;
     }
@@ -434,32 +440,6 @@
                 //CONTACTOS
 //--------------------------------------------------
 //--------------------------------------------------
-
-// @media (max-width: 1440px) {
-//     .sectionC{
-//         display: flex;
-//         flex-direction: column;
-//         justify-content: center;
-//         align-content: center;
-
-//         &__article{
-//             width:100%;
-//             margin: 0 auto;
-//             padding: 18rem 0rem 0rem  0rem;
-//             background-color: $color-fondo;
-//         }
-//         &__consulta{
-//             width:100%;
-//             margin: 0 auto;
-//             padding: 5rem 0 5rem 0;
-//             background-color: $color-fondo;
-//             &__form{
-//                 background-color:none;
-//             }
-//         }
-//     }
-// }
-
 
 @media (max-width: 1200px) {
     .sectionC{
