--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -25,6 +25,18 @@
     }
 
 //--------------------------------------------------
+                //BOTON DE COMPRAS
+//--------------------------------------------------
+.botocompra{
+    &__button{
+        font-size: 1.8rem;
+        font-weight: 500;
+        border-radius: 1.2rem;
+        padding: 2rem;
+        margin: 2rem 0;
+    }
+}
+//--------------------------------------------------
                 //SECTOR CARRUSEL
 //--------------------------------------------------
 
