--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -85,5 +85,11 @@
         padding: 1.8rem;
         text-align: center;
       }
+      & img {
+        right: 2rem;
+        bottom: 1rem;
+        width: 12%;
+      }
     }
+
 }
