--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -23,19 +23,74 @@
             z-index: 4; 
         }
     }
-
+//--------------------------------------------------
+                    //ACORDION
+//--------------------------------------------------
+.preguntas{
+    &__titulo{
+        margin: 2rem 0;
+        box-shadow: $color-shadow $size-shadow;        
+        &__div{
+            &__button{
+                list-style:none;
+                h2{
+                    color:black;
+                    text-decoration: none;
+                    font-size: 3.5rem;
+                    font-weight: 300;
+                }
+            }
+        }
+        &__collapse{
+            &__div{
+                h4{
+                    font-size:3rem;
+                    font-weight: 400;
+                    padding:1rem 2rem 1rem;
+                    margin-bottom: 1rem;
+                    border-bottom:solid 0.2rem;
+                    text-align: center;
+                }
+                h5{
+                    font-size:2.5rem;
+                    font-weight: 300;
+                    padding:1rem 2rem;
+                }
+                p{
+                    font-size:1.8rem;
+                    font-weight: 300;
+                    padding:1rem 2rem;
+                }
+                #p-especial{
+                    font-size:2rem;
+                    font-weight: 300;
+                    padding:1rem 2rem;
+                }
+                li{
+                    font-size:1.8rem;
+                    font-weight: 300;
+                    padding:1rem;
+                    margin-left:3rem
+                }
+            }
+        }
+    }
+}
 //--------------------------------------------------
                 //BOTON DE COMPRAS
 //--------------------------------------------------
 .botocompra{
+    background-color:$color-fondo; 
     &__button{
+        box-shadow: $color-shadow $size-shadow;
         font-size: 1.8rem;
         font-weight: 500;
         border-radius: 1.2rem;
         padding: 2rem;
-        margin: 2rem 0;
+        margin-top: 4rem;
     }
 }
+
 //--------------------------------------------------
                 //SECTOR CARRUSEL
 //--------------------------------------------------
