--- a/scss/_@media.scss
+++ b/scss/_@media.scss
@@ -272,7 +272,48 @@
         }
     }
 }
+//--------------------------------------------------
+                    //ACORDION
+//--------------------------------------------------
 
+@media (max-width: 768px) {
+    .preguntas{
+        &__titulo{
+            margin: 0 0 3rem 0;
+            &__div{
+                &__button{
+                    h2{
+                        color:black;
+                        font-size: 2.5rem;
+                        font-weight: 300;
+                    }
+                }
+            }
+            &__collapse{
+                &__div{
+                    h4{
+                        font-size:2rem;
+                    }
+                    h5{
+                        font-size:1.8rem; 
+                    }
+                    p{
+                        font-size:1.6rem;
+                    }
+                    #p-especial{
+                        font-size:1.8rem;
+                    }
+                    li{
+                        font-size:1.6rem;
+                    }
+                }
+            }
+        }
+    } 
+}
+//--------------------------------------------------
+                //BOTON DE COMPRAS
+//--------------------------------------------------
 //--------------------------------------------------
             //CARUSEL
 //--------------------------------------------------
