--- a/scss/_bebidas.scss
+++ b/scss/_bebidas.scss
@@ -28,6 +28,7 @@
         height: 100%;
         background-color: $color-fondo;
         padding-top: 5rem;
+        padding-bottom: 3rem;
         border: none;
 
         &__title {
