--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -1,5 +1,5 @@
 //VARIABLES
-$color-shadow:#979797;
+$color-shadow:#a5a5a5;
 $color-fondo: rgb(241, 241, 241);
 $size-shadow: 0.6rem 0.6rem 3rem 0.4rem;
 $size-width: 100%;
